--- a/README
+++ b/README
@@ -1,175 +1,116 @@
-Absolutely. Here is a detailed documentation for your ESP32-based e-paper aircraft tracker project.
-✈️ ESP32 E-Paper Aircraft Tracker
+# ✈️ ESP32 E-Paper Aircraft Tracker
 
-Real-time flight info display using OpenSky Network & e-paper
-📦 Project Overview
+A real-time aircraft tracking display using the OpenSky Network and a 4.2" e-paper display powered by an ESP32.
 
-This project uses an ESP32 microcontroller with a 4.2" e-paper display to show nearby aircraft in real time using data from the OpenSky Network. It supports:
+---
 
-    📡 Live aircraft fetch via OpenSky REST API
+## 📦 Project Overview
 
-    🌐 Configurable Wi-Fi & credentials via captive portal
+This project uses an ESP32 microcontroller paired with a 4.2" e-paper display to show nearby aircraft data in real-time. It fetches live flight information using the OpenSky Network API and enhances it with aircraft metadata from PlaneSpotters. Key features include:
 
-    🌍 Time zone-aware timestamp rendering
+- 📡 **Live aircraft tracking** via OpenSky REST API  
+- 🌐 **Captive portal for Wi-Fi and API configuration**  
+- 🕒 **Time zone-aware clock rendering**  
+- 🛩 **Aircraft metadata display** (model, callsign, country, bearing, distance)  
+- 📟 **Flicker-free partial updates on e-paper display**  
+- 🧠 **On-device caching** for up to 30 aircraft entries  
 
-    ✈️ Aircraft model metadata via PlaneSpotters + OpenSky
+---
 
-    📟 E-paper display with flicker-free partial updates
+## 🧱 Hardware Requirements
 
-    🧠 On-device caching of aircraft info (up to 30 entries)
+| Component               | Notes                                 |
+|------------------------|----------------------------------------|
+| ESP32 Dev Board        | At least 4MB flash (any model)         |
+| Waveshare 4.2" E-Paper | Use the `epd4in2_V2` model              |
+| Pushbutton             | For entering Config Mode (GPIO 2)      |
+| Power Supply           | USB or LiPo battery (as preferred)     |
 
-🧱 Hardware Requirements
-Component	Notes
-ESP32 (any dev board)	With at least 4MB flash
-Waveshare 4.2" e-paper	epd4in2_V2 model
-Pushbutton	Used for entering Config Mode
-Optional power source	USB, LiPo, etc.
-🗂 File Structure
+---
+
+## 🗂 File Structure
 
 src/
-├── main.cpp                   # Entry point
-├── config.h / config.cpp      # Preferences, AP-mode config portal
-├── display.h / display.cpp    # All e-paper drawing logic
-├── fetch.h / fetch.cpp        # OpenSky/PlaneSpotters + state updates
-├── cache.h / cache.cpp        # Aircraft data cache + sorting
-├── OpenSkyAuthClient.h/.cpp   # Handles OAuth2 token fetch
+├── main.cpp # Main application entry point
+├── config.h / config.cpp # Captive portal and preference saving
+├── display.h / display.cpp # All e-paper rendering logic
+├── fetch.h / fetch.cpp # API interaction (OpenSky + PlaneSpotters)
+├── cache.h / cache.cpp # Circular cache for aircraft data
+├── OpenSkyAuthClient.h/.cpp # OAuth2 token management
 
-⚙️ How It Works
-1. Boot & Config Mode
 
-    On boot, if GPIO 2 is held LOW, the ESP32 enters Config Mode
+---
 
-    A Wi-Fi AP ESP_Config is created
+## ⚙️ How It Works
 
-    The user connects and fills:
+### 🔧 1. Config Mode (On First Boot or Reset)
 
-        WiFi SSID & Password
+- Hold GPIO 2 LOW during boot to enter Config Mode.
+- ESP32 starts a Wi-Fi AP named `ESP_Config`.
+- Open a browser and visit `http://192.168.4.1`.
+- Fill in:
+  - Wi-Fi SSID & Password
+  - OpenSky Client ID & Secret
+  - Home Latitude, Longitude, Zoom level
+  - Timezone offset (e.g., +05:30) and 24h format
+- Settings are saved in non-volatile memory (Preferences).
 
-        OpenSky Client ID + Secret
+### 🚀 2. Normal Mode
 
-        Home Lat, Lon, Zoom level
+- ESP32 connects to Wi-Fi using saved credentials.
+- Fetches a valid OAuth2 token from OpenSky.
+- Every 15 seconds:
+  - Fetches aircraft within a bounding box (based on home coordinates and zoom).
+  - For each aircraft:
+    - Fetches metadata from PlaneSpotters/OpenSky.
+    - Caches model, callsign, bearing, distance.
+- Updates e-paper display with aircraft info.
 
-        Timezone and 24h format toggle
+### 🖥 3. Display Modes
 
-    These values are saved to Preferences
+- **No Aircraft Nearby:**
+  - Displays local time, date, and a message.
+  - Uses partial update (no flicker).
 
-2. Normal Mode
+- **Aircraft Nearby:**
+  - Displays up to 5 aircraft.
+  - Alternates entries using inverted color blocks.
+  - Shows time and aircraft count in the header.
 
-    WiFi connects using saved credentials
+---
 
-    OpenSkyAuthClient fetches a valid token
+## 🧠 Key Features
 
-    Every 15 seconds:
+### 🕒 Timezone-Aware Clock
 
-        Nearby aircraft are queried
+- Timezone offset is user-configured (e.g., `+05:30` → `+330` minutes).
+- Uses `strftime` for proper formatting after applying offset.
 
-        Positions are filtered by bounding box (based on zoom)
+### 🧠 Caching System
 
-        For each new aircraft:
+- `AircraftCacheEntry[]` includes:
+  - `icao24`, `model`, `callsign`, `distance`, `bearing`, `active`
+- Ring buffer with 30 entries (cycled via `cacheIndex`).
+- Sorted by distance using `sortAircraftCacheByDistance()`.
 
-            Metadata is fetched from PlaneSpotters/OpenSky
+### 🖼 E-Paper Refresh Logic
 
-            Model, callsign, bearing, and distance are cached
+- **Partial updates** for normal refreshes (e.g., aircraft or time change).
+- **Full updates** only when switching between states (e.g., no aircraft → aircraft detected).
 
-    Aircraft data is displayed:
+---
 
-        Model on Line 1
+## 🔧 Setup (PlatformIO)
 
-        Info on Line 2: Callsign + distance + direction + country
+Your `platformio.ini` should look like:
 
-3. Display Modes
-
-    If no aircraft nearby:
-
-        Time and date are shown with no aircraft nearby message
-
-        This screen uses partial updates to avoid flicker
-
-    If aircraft are nearby:
-
-        Up to 5 aircraft shown in alternating inverted color blocks
-
-        Header shows time and aircraft count
-
-🧠 Key Features
-✅ Timezone-Aware Clock
-
-    TZ_minutes calculated from dropdown (e.g., +05:30)
-
-    Applies offset before formatting time with strftime
-
-✅ Caching
-
-    AircraftCacheEntry[] holds:
-
-        icao24, model, callsign, distance, bearing, active
-
-    cacheIndex cycles through 30-slot ring buffer
-
-    sortAircraftCacheByDistance() helps prioritize closest craft
-
-✅ Flicker-Free Display
-
-    E-paper updates are:
-
-        Partial for aircraft & time refresh
-
-        Full only when switching display modes (e.g., from no aircraft → aircraft found)
-
-🔧 Setup (PlatformIO)
-platformio.ini
-
+```ini
 [env:esp32dev]
 platform = espressif32
 board = esp32dev
 framework = arduino
 lib_deps =
   bblanchon/ArduinoJson@^6.21.3
-  # Add your e-paper library
+  # Add e-paper display library here (e.g., GxEPD2 or Waveshare)
 build_flags =
   -DCORE_DEBUG_LEVEL=3
-
-🔐 OpenSky Credentials
-
-To get a client ID/secret:
-
-    Register at OpenSky REST
-
-    Use the credentials in the Config Portal
-
-    Your access token is auto-refreshed when expired
-
-🚦 How to Use
-✅ First Boot
-
-    Hold button connected to GPIO 2 LOW
-
-    Connect to ESP_Config WiFi
-
-    Go to http://192.168.4.1
-
-    Fill form and hit Save
-
-✅ Normal Operation
-
-    Every 15s, display updates automatically
-
-    Shows:
-
-        Live aircraft
-
-        Model + Callsign
-
-        Compass direction and distance
-
-📌 Future Ideas
-
-    Add aircraft icons / pixel graphics
-
-    Use barometric data to show altitude
-
-    Add BLE or MQTT for remote commands
-
-    Store history in SPIFFS or SD card
-
-    Implement paginated aircraft lists
