--- a/README
+++ b/README
@@ -1,175 +1,108 @@
-Absolutely. Here is a detailed documentation for your ESP32-based e-paper aircraft tracker project.
-✈️ ESP32 E-Paper Aircraft Tracker
+# ✈️ ESP32 E-Paper Aircraft Tracker
 
-Real-time flight info display using OpenSky Network & e-paper
-📦 Project Overview
+A real-time aircraft tracking display using the OpenSky Network and a 4.2" e-paper display powered by an ESP32.
 
-This project uses an ESP32 microcontroller with a 4.2" e-paper display to show nearby aircraft in real time using data from the OpenSky Network. It supports:
+---
 
-    📡 Live aircraft fetch via OpenSky REST API
+## 📦 Project Overview
 
-    🌐 Configurable Wi-Fi & credentials via captive portal
+This project uses an ESP32 microcontroller paired with a 4.2" e-paper display to show nearby aircraft data in real-time. It fetches live flight information using the OpenSky Network API and enhances it with aircraft metadata from PlaneSpotters. Key features include:
 
-    🌍 Time zone-aware timestamp rendering
+- 📡 **Live aircraft tracking** via OpenSky REST API  
+- 🌐 **Captive portal for Wi-Fi and API configuration**  
+- 🕒 **Time zone-aware clock rendering**  
+- 🛩 **Aircraft metadata display** (model, callsign, country, bearing, distance)  
+- 📟 **Flicker-free partial updates on e-paper display**  
+- 🧠 **On-device caching** for up to 30 aircraft entries  
 
-    ✈️ Aircraft model metadata via PlaneSpotters + OpenSky
+---
 
-    📟 E-paper display with flicker-free partial updates
+## 🧱 Hardware Requirements
 
-    🧠 On-device caching of aircraft info (up to 30 entries)
+| Component               | Notes                                 |
+|------------------------|----------------------------------------|
+| ESP32 Dev Board        | At least 4MB flash (any model)         |
+| Waveshare 4.2" E-Paper | Use the `epd4in2_V2` model              |
+| Pushbutton             | For entering Config Mode (GPIO 2)      |
+| Power Supply           | USB or LiPo battery (as preferred)     |
 
-🧱 Hardware Requirements
-Component	Notes
-ESP32 (any dev board)	With at least 4MB flash
-Waveshare 4.2" e-paper	epd4in2_V2 model
-Pushbutton	Used for entering Config Mode
-Optional power source	USB, LiPo, etc.
-🗂 File Structure
+---
 
+## 🗂 File Structure
+```
 src/
-├── main.cpp                   # Entry point
-├── config.h / config.cpp      # Preferences, AP-mode config portal
-├── display.h / display.cpp    # All e-paper drawing logic
-├── fetch.h / fetch.cpp        # OpenSky/PlaneSpotters + state updates
-├── cache.h / cache.cpp        # Aircraft data cache + sorting
-├── OpenSkyAuthClient.h/.cpp   # Handles OAuth2 token fetch
+├── main.cpp                 # Main application entry point
+├── config.h / config.cpp    # Captive portal and preference saving
+├── display.h / display.cpp  # All e-paper rendering logic
+├── fetch.h / fetch.cpp      # API interaction (OpenSky + PlaneSpotters)
+├── cache.h / cache.cpp      # Circular cache for aircraft data
+└── OpenSkyAuthClient.h/.cpp # OAuth2 token management
+```
 
-⚙️ How It Works
-1. Boot & Config Mode
+---
 
-    On boot, if GPIO 2 is held LOW, the ESP32 enters Config Mode
+## ⚙️ How to DIY
 
-    A Wi-Fi AP ESP_Config is created
+### Software setup
+### 🔧 1. get Openskynet API credentials
 
-    The user connects and fills:
+- Create an [OpenSky Network](https://auth.opensky-network.org/auth/realms/opensky-network/protocol/openid-connect/auth?response_type=code&client_id=website-ui&scope=openid&redirect_uri=https%3A%2F%2Fopensky-network.org%2Fredirect-uri&state=6946459d-6755-4361-887d-81976590974b) account 
 
-        WiFi SSID & Password
+- Sign in to your account, then under `API Client` click `Create & Download Credential`.
+- credential file will be downloaded as `credentials.json`, in that your clientId	and clientSecret will be precent, keep this info for now we need it later.
 
-        OpenSky Client ID + Secret
+### 🚀 2. Firmware upload to ESP32
 
-        Home Lat, Lon, Zoom level
+- Download release ZIP, and extract them, inside you find Bootloader.bin, partition.bin and firmware.bin.
+- Go to [ESP online flasher](https://espressif.github.io/esptool-js/).
+- connect you ESP with the machine while holding the boot button of the esp, then on browser under 'program' click connect, a popup will appear choose the serial port the esp is connected and click connect on popup box again now the esp should be connected [note: if esp didnt connect, plug out the esp and then hold the boot button then plug back in keep holding the boot button till you get connected with esp]
+- by clicking on add file you can add files and choose the appiriate files as shown on the image, and click program this might take a while
 
-        Timezone and 24h format toggle
+### Hardware setup
+### 🖥 1. Wire connection
+- Connect Waveshare E-paper display with ESP
+- attach a config button to ESP's gpio 2
 
-    These values are saved to Preferences
+### Full setup
+- now that both hardware and software setup is done power on the ESP via USB or any prefered source
+- esp will automatically detect when there is no valid credentails and boots to config mode. [note: if ESP not in config mode, you can put esp in config mode manually by pressing the config button on gpio 2 when plugging in]
+- in config mode the ESP will give out open wifi named `WC_Sky_display` connect to the wifi
+- and enter this on the url of your brower `192.168.4.1` from the device connected to esp's wifi
+- config page will appear, enter your credentials including clientId	and clientSecret which we downloaded earlier
+- once done click save , the display will refresh and boot 
 
-2. Normal Mode
+---
 
-    WiFi connects using saved credentials
+## 🧠 Key Features
 
-    OpenSkyAuthClient fetches a valid token
+### 🕒 Timezone-Aware Clock
 
-    Every 15 seconds:
+- Timezone offset is user-configured (e.g., `+05:30` → `+330` minutes).
+- Uses `strftime` for proper formatting after applying offset.
 
-        Nearby aircraft are queried
+### 🧠 Caching System
 
-        Positions are filtered by bounding box (based on zoom)
+- `AircraftCacheEntry[]` includes:
+  - `icao24`, `model`, `callsign`, `distance`, `bearing`, `active`
+- Ring buffer with 30 entries (cycled via `cacheIndex`).
+- Sorted by distance using `sortAircraftCacheByDistance()`.
 
-        For each new aircraft:
+### 🖼 E-Paper Refresh Logic
 
-            Metadata is fetched from PlaneSpotters/OpenSky
+- **Partial updates** for normal refreshes (e.g., aircraft or time change).
+- **Full updates** only when switching between states (e.g., no aircraft → aircraft detected).
 
-            Model, callsign, bearing, and distance are cached
+- **No Aircraft Nearby:**
+  - Displays local time, date, and a message.
+  - Uses partial update (no flicker).
 
-    Aircraft data is displayed:
+- **Aircraft Nearby:**
+  - Displays up to 5 aircraft.
+  - Alternates entries using inverted color blocks.
+  - Shows time and aircraft count in the header.
+---
 
-        Model on Line 1
+## 🔧 Setup (PlatformIO)
 
-        Info on Line 2: Callsign + distance + direction + country
+Your `platformio.ini` should look like:
 
-3. Display Modes
-
-    If no aircraft nearby:
-
-        Time and date are shown with no aircraft nearby message
-
-        This screen uses partial updates to avoid flicker
-
-    If aircraft are nearby:
-
-        Up to 5 aircraft shown in alternating inverted color blocks
-
-        Header shows time and aircraft count
-
-🧠 Key Features
-✅ Timezone-Aware Clock
-
-    TZ_minutes calculated from dropdown (e.g., +05:30)
-
-    Applies offset before formatting time with strftime
-
-✅ Caching
-
-    AircraftCacheEntry[] holds:
-
-        icao24, model, callsign, distance, bearing, active
-
-    cacheIndex cycles through 30-slot ring buffer
-
-    sortAircraftCacheByDistance() helps prioritize closest craft
-
-✅ Flicker-Free Display
-
-    E-paper updates are:
-
-        Partial for aircraft & time refresh
-
-        Full only when switching display modes (e.g., from no aircraft → aircraft found)
-
-🔧 Setup (PlatformIO)
-platformio.ini
-
-[env:esp32dev]
-platform = espressif32
-board = esp32dev
-framework = arduino
-lib_deps =
-  bblanchon/ArduinoJson@^6.21.3
-  # Add your e-paper library
-build_flags =
-  -DCORE_DEBUG_LEVEL=3
-
-🔐 OpenSky Credentials
-
-To get a client ID/secret:
-
-    Register at OpenSky REST
-
-    Use the credentials in the Config Portal
-
-    Your access token is auto-refreshed when expired
-
-🚦 How to Use
-✅ First Boot
-
-    Hold button connected to GPIO 2 LOW
-
-    Connect to ESP_Config WiFi
-
-    Go to http://192.168.4.1
-
-    Fill form and hit Save
-
-✅ Normal Operation
-
-    Every 15s, display updates automatically
-
-    Shows:
-
-        Live aircraft
-
-        Model + Callsign
-
-        Compass direction and distance
-
-📌 Future Ideas
-
-    Add aircraft icons / pixel graphics
-
-    Use barometric data to show altitude
-
-    Add BLE or MQTT for remote commands
-
-    Store history in SPIFFS or SD card
-
-    Implement paginated aircraft lists
